transform.log
miniprogram-to-uniapp v2 è½¬æ¢æ—¥å¿—

å·¥å…·ç‰ˆæœ¬ï¼šv2.0.15
è½¬æ¢æ¨¡å¼ï¼šHBuilder X
æ˜¯å¦åˆå¹¶cssï¼šå¦
é¡¹ç›® '_1440411407_7' å¼€å§‹è½¬æ¢...
sourceFolder = /home/geek/wxapkg-convertor/src/_1440411407_7
æœç´¢åˆ°497ä¸ªæ–‡ä»¶ï¼Œè€—æ—¶ï¼š3ms


[Tip]è¿™é‡Œå¼•ç”¨çš„å…¨æ˜¯ç½‘ç»œå­—ä½“ï¼Œå¯èƒ½åœ¨appä¸Šé¢æœ‰å…¼å®¹é—®é¢˜ï¼ˆå¦‚å­—ä½“å›¾æ ‡æ˜¾ç¤ºä¸å‡ºæ¥ï¼Œè¿è¡Œåæ²¡é—®é¢˜å°±ä¸ç”¨ç®¡ï¼‰  fileKey: app

[Tip]è¿™ä¸ªé¡µé¢çš„ç»“æ„éæ ‡å‡†ç»“æ„ï¼Œå°è¯•ä¿®å¤ä¸€ä¸‹ï¼Œå¦‚æœ‰é—®é¢˜ï¼Œè¯·å…ˆè°ƒæ•´åï¼Œå†è½¬æ¢ã€‚ file:miniprogram_npm/@vant/weapp/common/component

[Tip]è¿™é‡Œå¼•ç”¨çš„å…¨æ˜¯ç½‘ç»œå­—ä½“ï¼Œå¯èƒ½åœ¨appä¸Šé¢æœ‰å…¼å®¹é—®é¢˜ï¼ˆå¦‚å­—ä½“å›¾æ ‡æ˜¾ç¤ºä¸å‡ºæ¥ï¼Œè¿è¡Œåæ²¡é—®é¢˜å°±ä¸ç”¨ç®¡ï¼‰  fileKey: miniprogram_npm/@vant/weapp/icon/index
[Error]variableHandle:  components/dialog-add-card/index
[Error]variableHandle:  components/dialog-m1-data-editor/editor
[Error]variableHandle:  components/dialog-msg-box-dark/dialog
[Error]variableHandle:  components/dialog-tag-nick-editor/editor
æ ¼å¼åŒ–Error: fileKey: miniprogram_npm/@vant/weapp/common/component     type:js       errorï¼š SyntaxError: Unexpected token (25:6)
[0m [90m 23 |[39m     multipleSlots[33m:[39m [33m![39m[35m0[39m[33m,[39m[0m
[0m [90m 24 |[39m     addGlobalClass[33m:[39m [33m![39m[35m0[39m[0m
[0m[31m[1m>[22m[39m[90m 25 |[39m   }[33m,[39m [36mexport[39m [36mdefault[39m {[0m
[0m [90m    |[39m      [31m[1m^[22m[39m[0m
[0m [90m 26 |[39m                       data() {[0m
[0m [90m 27 |[39m                           [36mreturn[39m {}[0m
[0m [90m 28 |[39m                       }[33m,[39m[0m
    at p (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/parser-babel.js:22:1038)
    at d (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/parser-babel.js:22:1271)
    at Object.parse (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/parser-babel.js:27:50335)
    at Object.parse (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/index.js:7361:23)
    at coreFormat (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/index.js:8672:18)
    at formatWithCursor2 (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/index.js:8864:18)
    at /usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/index.js:39174:12
    at Object.format (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/node_modules/prettier/index.js:39188:12)
    at formateByPrettier (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/src/utils/formatUtils.js:178:24)
    at Object.formatCode (/usr/local/lib/nodejs/node-v16.15.0-linux-x64/lib/node_modules/miniprogram-to-uniapp/src/utils/formatUtils.js:150:19) {
  loc: { start: { line: 25, column: 6 } },
  codeFrame: '\x1B[0m \x1B[90m 23 |\x1B[39m     multipleSlots\x1B[33m:\x1B[39m \x1B[33m!\x1B[39m\x1B[35m0\x1B[39m\x1B[33m,\x1B[39m\x1B[0m\n' +
    '\x1B[0m \x1B[90m 24 |\x1B[39m     addGlobalClass\x1B[33m:\x1B[39m \x1B[33m!\x1B[39m\x1B[35m0\x1B[39m\x1B[0m\n' +
    '\x1B[0m\x1B[31m\x1B[1m>\x1B[22m\x1B[39m\x1B[90m 25 |\x1B[39m   }\x1B[33m,\x1B[39m \x1B[36mexport\x1B[39m \x1B[36mdefault\x1B[39m {\x1B[0m\n' +
    '\x1B[0m \x1B[90m    |\x1B[39m      \x1B[31m\x1B[1m^\x1B[22m\x1B[39m\x1B[0m\n' +
    '\x1B[0m \x1B[90m 26 |\x1B[39m                       data() {\x1B[0m\n' +
    '\x1B[0m \x1B[90m 27 |\x1B[39m                           \x1B[36mreturn\x1B[39m {}\x1B[0m\n' +
    '\x1B[0m \x1B[90m 28 |\x1B[39m                       }\x1B[33m,\x1B[39m\x1B[0m'
}
æ ¼å¼åŒ–Error: code: Object.defineProperty(exports, "__esModule", {
  value: !0
}), exports.VantComponent = void 0;

var e = require("./../mixins/basic.js");

exports.VantComponent = function (s) {
  a = s, t = r, o = {
    data: "data",
    props: "properties",
    mixins: "behaviors",
    methods: "methods",
    beforeCreate: "created",
    created: "attached",
    mounted: "ready",
    destroyed: "detached",
    classes: "externalClasses"
  }, Object.keys(o).forEach(function (e) {
    a[e] && (t[o[e]] = a[e]);
  }), r.externalClasses = r.externalClasses || [], r.externalClasses.push("custom-class"), r.behaviors = r.behaviors || [], r.behaviors.push(e.basic);
  var i = s.relation;
  i && (r.relations = i.relations, r.behaviors.push(i.mixin)), s.field && r.behaviors.push("wx://form-field"), r.options = {
    multipleSlots: !0,
    addGlobalClass: !0
  }, export default {
                      data() {
                          return {}
                      },
                      
                  };
};
æ‰¾ä¸åˆ°è¿™ä¸ªç»„ä»¶: components/custom-tab-bar/index
æ‰¾ä¸åˆ°è¿™ä¸ªç»„ä»¶: components/custom-tab-bar/index
[Error]variableHandle:  pages/password-management/password-management
[Error]variableHandle:  pages/reward-task-tiktok/tiktok
æ‰¾ä¸åˆ°è¿™ä¸ªç»„ä»¶: components/custom-tab-bar/index
æ‰¾ä¸åˆ°è¿™ä¸ªç»„ä»¶: components/custom-tab-bar/index
write pages.json success!
write manifest.json success!
write main.js success!


ç»Ÿè®¡ä¿¡æ¯ï¼š

vueæ–‡ä»¶æ•°é‡: 71
æ”¯ä»˜apiæ•°é‡: 2
ç™»å½•apiæ•°é‡: 4

æ­å–œä½ ï¼Œè½¬æ¢å®Œæˆï¼
ç”¨æ—¶: 28.132s
åœ¨è¯¥å°ç¨‹åºé¡¹ç›®çš„åŒçº§ç›®å½•å¯ä»¥çœ‹åˆ°_uniç»“å°¾çš„é¡¹ç›®ï¼Œå³æ˜¯è½¬æ¢å¥½çš„uniappé¡¹ç›®ï¼Œç›¸å…³æ—¥å¿—åœ¨è¯¥ç›®å½•é‡Œã€‚

æ³¨ï¼šå¦‚æœ‰ç–‘é—®ï¼Œè¯·æ·»åŠ QQç¾¤(780359397ã€361784059ã€603659851)æˆ–https://github.com/zhangdaren/miniprogram-to-uniappè¿›è¡Œåé¦ˆï¼



